--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ resume_social_links:
   # resume_twitter_url:           "http://twitter.com/jglovier"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/paulreimer"
+  resume_linkedin_url:          "https://www.linkedin.com/in/paul-reimer"
   resume_instagram_url:         "https://www.instagram.com/paulreimer"
   resume_website_url:           "https://resume.p-rimes.net"
   # resume_medium_url:            "https://medium.com/@jglovier"
