--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,95 @@
-# Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Research In Progress, Vancouver, BC
+  position: Founder
+  duration: April 2017 &mdash; Present
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+- company: Awesense, Vancouver BC
+  position: Operations Engineer
+  duration: May 2015 &mdash; April 2017
+  summary: |
+    Responsibilities as an Operations Engineer
+    ● Automation of existing deployment processes; designing process updates and architecture to facilitate a SaaS platform using the cloud, within a security-focused, enterprise environment.
+    ● Improve developer team productivity through the use of new software tools, workflows, and automation frameworks.
+    ● Network design and implementation of enterprise deployments in multiple regions, across multiple cloud and IaaS vendors. Accomplishments
+    ● Refactored large existing application for use with scheduled bare-metal clusters using Kubernetes/Docker.
+    Accomplishments
+    ● Fully automated deployment process for server provisioning and application deployment.
+    ● Implemented centralized logging and metrics analytics systems including dashboard design.
+    ● Created CI pipeline implementing containerization and supporting continuous delivery.
 
+- company: Limbic Media, Victoria BC
+  position: Project Engineer
+  duration: June 2010 &mdash; May 2015
+  summary: |
+    Responsibilities as a Project Engineer
+    ● Software engineering design and development for industrial, automated sensing contracts, and including hardware sourcing, firmware design, driver development, OS customization, and developing production architectures and internal tools.
+    ● Developing electronics, sensor, and new-user-interface applications for real-time interactive art installation contracts, working with artists to deliver a polished work.
+    ● System administration/operations, web architecture design and implementation for custom web services relating to art installation and/or industrial contracts, including maintenance and analytics through the lifecycle of the deployment.
+    Accomplishments
+    ● Sourced and designed the electronics and control software for the ​G++ Interactive Gallery Sign​ outside the Limbic Headquarters, featuring a public website with fast+interactive control of video playback and messages, to advertise and demonstrate to potential clients.
+    ● Designed and implemented a real-time, audio-reactive lighting control platform, using STM32F4 ICs and DMA/I2S audio processing pipeline.
+    ● Architected and implemented a robust, vehicle-mounted embedded Linux device integrating multiple sensors, multi-bearer networking, and a distributed queueing system.
+    ● Designed desktop applications and sensor processing algorithms for eight different art installations, with city-wide exhibitions.
 
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: Simbioses Lab, University of Victoria​, Victoria, BC
+  position: Researcher
+  duration: June 2009 &mdash; August 2010
+  summary: |
+    Accomplishments
+    ● Received NSERC USRA grant for researching computer vision.
+    ● Developed a rapid software prototyping environment using tangible objects based on fiducial markers and a conventional LCD monitor.
+    ● Adapted the prototyping application for a high-school workshop highlighting computer vision, presented at Brentwood College, Victoria BC.
+  
+- company: Schneider Electric​, Victoria, BC
+  position: Experimental Web Technologies Developer (Co-op)
+  duration: September &mdash; December 2008
+  summary: |
+    Responsibilities as an Experimental Web Technologies Developer (Co-op)
+    ● Implement proof-of-concept solutions for linking power monitoring devices to the web.
+    ● Research upcoming W3C web standards and emerging social network APIs.
+    ● Develop prototypes highlighting benefits of new standards.
+    ● Present findings to senior developers.
+    ● Write SR&ED Canada research reports documenting innovations. Accomplishments
+    ● Created several prototypes able to communicate with existing, deployed power meters without requiring firmware/hardware upgrades.
+    ● Wrote a parser for an established serial protocol, building packets which are forwarded to the appropriate power meter, which can alter settings and/or generate reports.
+    ● Implemented a similar web application targeting mobile devices.
+
+- company: TheNumber Inc.​, Victoria, BC
+  position: Web Performance Developer (Co-op)
+  duration: March &mdash; May 2008
+  summary: |
+    Responsibilities as a Web Performance Developer (Co-op)
+    ● Become familiar with a large existing codebase for an in-house CMS web application.
+    ● Locate opportunities for performance optimizations.
+    ● Implement various servers and services.
+    ● Benchmark improved architecture against existing system to verify speed gains.
+    Accomplishments
+    ● Learned a large variety of cutting-edge web technologies and techniques.
+    ● Implemented a distributed memory caching cluster.
+    ● Constructed a semi-automated accounts management and installation application.
+
+- company: eTraffic Solutions Inc., Victoria, BC
+  position: Junior Developer (Co-op)
+  duration: September &mdash; December 2006
+  summary: |
+    Responsibilities as a Junior Developer (Co-op)
+    ● Receive requirements from project/development manager.
+    ● Document all steps in designing and implementing a solution to a complex problem.
+    ● Create new features for web-based educational software.
+    Accomplishments
+    ● Learned to work efficiently in a small team environment.
+    ● Established a rhythm of working to achieve constantly high productivity.
+    ● Determined a personal method for improving efficiency of a repeated process.
+
+- company: Neverblue Media Inc.​, Victoria, BC
+  position: Programmer / Data Enterer (Co-op)
+  duration: January &mdash; ​April 2006
+  summary: |
+    Responsibilities as a Programmer / Data Enterer (Co-op)
+    ● Create modules in PHP for a large online advertising framework.
+    ● Create administrative tools to improve internal efficiency.
+    ● Manage and edit relational database systems.
+    ● Investigate new development tools.
+    Accomplishments
+    ● Learned to program efficiently in a small team environment.
+    ● Became familiar with a huge range of open-source utilities.
+    ● Created several internal administration modules to improve user management.
