--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,4 @@
 # Interests
 - description: My current major project is an IoT, reactive LED control platform; I have designed a battery-powered ARM-powered product with a microphone/audio-processor, and 100s of RGB LEDs connected which can be programmed remotely, over-the-air and in real-time.
 - description: I enjoy the process of creating high quality specialty coffee.
-- description: Collecting and recommending music in a wide variety of musical styles is a hobby of mine,
-and I search actively for live and studio DJ sets.
+- description: Collecting and recommending music in a wide variety of musical styles is a hobby of mine, and I search actively for live and studio DJ sets.
