Update skills.yml, using YAML | instead of >

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,25 +7,25 @@
     ● Desktop applications with OpenGL/GPU programming.
 
 - skill: System Administration
-  description: >
+  description: |
     ● Extensive UNIX/Linux utilities/techniques experience.
     ● Cloud/SaaS platform service provisioning, and system monitoring/maintenance.
 
 - skill: Circuit Design
-  description: >
+  description: |
     ● Schematic and PCB design.
     ● Construction and assembly of circuits.
     ● Firmware development of sensor/interface drivers.
     ● Circuit testing/debugging.
 
 - skill: Teaching/Learning
-  description: >
+  description: |
     ● Ability to adapt to new technology and processes extremely rapidly.
     ● Skilled in the distillation of information and the instruction of others.
     ● Using intuitive grasp of machinery and electronics.
 
 - skill: Interpersonal
-  description: >
+  description: |
     ● Adept at creating relationships quickly.
     ● Skilled at determining and matching a community vibe.
     ● An excellent attentive listener.
