--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,90 +6,91 @@
   position: Operations Engineer
   duration: May 2015 &mdash; April 2017
   summary: |
-    Responsibilities as an Operations Engineer
-    ● Automation of existing deployment processes; designing process updates and architecture to facilitate a SaaS platform using the cloud, within a security-focused, enterprise environment.
-    ● Improve developer team productivity through the use of new software tools, workflows, and automation frameworks.
-    ● Network design and implementation of enterprise deployments in multiple regions, across multiple cloud and IaaS vendors. Accomplishments
-    ● Refactored large existing application for use with scheduled bare-metal clusters using Kubernetes/Docker.
-    Accomplishments
-    ● Fully automated deployment process for server provisioning and application deployment.
-    ● Implemented centralized logging and metrics analytics systems including dashboard design.
+    Responsibilities as an Operations Engineer<br/>
+    ● Automation of existing deployment processes; designing process updates and architecture to facilitate a SaaS platform using the cloud, within a security-focused, enterprise environment.<br/>
+    ● Improve developer team productivity through the use of new software tools, workflows, and automation frameworks.<br/>
+    ● Network design and implementation of enterprise deployments in multiple regions, across multiple cloud and IaaS vendors.<br/>
+    Accomplishments<br/>
+    ● Refactored large existing application for use with scheduled bare-metal clusters using Kubernetes/Docker.<br/>
+    ● Fully automated deployment process for server provisioning and application deployment.<br/>
+    ● Implemented centralized logging and metrics analytics systems including dashboard design.<br/>
     ● Created CI pipeline implementing containerization and supporting continuous delivery.
 
 - company: Limbic Media, Victoria BC
   position: Project Engineer
   duration: June 2010 &mdash; May 2015
   summary: |
-    Responsibilities as a Project Engineer
-    ● Software engineering design and development for industrial, automated sensing contracts, and including hardware sourcing, firmware design, driver development, OS customization, and developing production architectures and internal tools.
-    ● Developing electronics, sensor, and new-user-interface applications for real-time interactive art installation contracts, working with artists to deliver a polished work.
-    ● System administration/operations, web architecture design and implementation for custom web services relating to art installation and/or industrial contracts, including maintenance and analytics through the lifecycle of the deployment.
-    Accomplishments
-    ● Sourced and designed the electronics and control software for the ​G++ Interactive Gallery Sign​ outside the Limbic Headquarters, featuring a public website with fast+interactive control of video playback and messages, to advertise and demonstrate to potential clients.
-    ● Designed and implemented a real-time, audio-reactive lighting control platform, using STM32F4 ICs and DMA/I2S audio processing pipeline.
-    ● Architected and implemented a robust, vehicle-mounted embedded Linux device integrating multiple sensors, multi-bearer networking, and a distributed queueing system.
+    Responsibilities as a Project Engineer<br/>
+    ● Software engineering design and development for industrial, automated sensing contracts, and including hardware sourcing, firmware design, driver development, OS customization, and developing production architectures and internal tools.<br/>
+    ● Developing electronics, sensor, and new-user-interface applications for real-time interactive art installation contracts, working with artists to deliver a polished work.<br/>
+    ● System administration/operations, web architecture design and implementation for custom web services relating to art installation and/or industrial contracts, including maintenance and analytics through the lifecycle of the deployment.<br/>
+    Accomplishments<br/>
+    ● Sourced and designed the electronics and control software for the ​G++ Interactive Gallery Sign​ outside the Limbic Headquarters, featuring a public website with fast+interactive control of video playback and messages, to advertise and demonstrate to potential clients.<br/>
+    ● Designed and implemented a real-time, audio-reactive lighting control platform, using STM32F4 ICs and DMA/I2S audio processing pipeline.<br/>
+    ● Architected and implemented a robust, vehicle-mounted embedded Linux device integrating multiple sensors, multi-bearer networking, and a distributed queueing system.<br/>
     ● Designed desktop applications and sensor processing algorithms for eight different art installations, with city-wide exhibitions.
 
 - company: Simbioses Lab, University of Victoria​, Victoria, BC
   position: Researcher
   duration: June 2009 &mdash; August 2010
   summary: |
-    Accomplishments
-    ● Received NSERC USRA grant for researching computer vision.
-    ● Developed a rapid software prototyping environment using tangible objects based on fiducial markers and a conventional LCD monitor.
+    Accomplishments<br/>
+    ● Received NSERC USRA grant for researching computer vision.<br/>
+    ● Developed a rapid software prototyping environment using tangible objects based on fiducial markers and a conventional LCD monitor.<br/>
     ● Adapted the prototyping application for a high-school workshop highlighting computer vision, presented at Brentwood College, Victoria BC.
   
 - company: Schneider Electric​, Victoria, BC
   position: Experimental Web Technologies Developer (Co-op)
   duration: September &mdash; December 2008
   summary: |
-    Responsibilities as an Experimental Web Technologies Developer (Co-op)
-    ● Implement proof-of-concept solutions for linking power monitoring devices to the web.
-    ● Research upcoming W3C web standards and emerging social network APIs.
-    ● Develop prototypes highlighting benefits of new standards.
-    ● Present findings to senior developers.
-    ● Write SR&ED Canada research reports documenting innovations. Accomplishments
-    ● Created several prototypes able to communicate with existing, deployed power meters without requiring firmware/hardware upgrades.
-    ● Wrote a parser for an established serial protocol, building packets which are forwarded to the appropriate power meter, which can alter settings and/or generate reports.
+    Responsibilities as an Experimental Web Technologies Developer (Co-op)<br/>
+    ● Implement proof-of-concept solutions for linking power monitoring devices to the web.<br/>
+    ● Research upcoming W3C web standards and emerging social network APIs.<br/>
+    ● Develop prototypes highlighting benefits of new standards.<br/>
+    ● Present findings to senior developers.<br/>
+    ● Write SR&ED Canada research reports documenting innovations.<br/>
+    Accomplishments<br/>
+    ● Created several prototypes able to communicate with existing, deployed power meters without requiring firmware/hardware upgrades.<br/>
+    ● Wrote a parser for an established serial protocol, building packets which are forwarded to the appropriate power meter, which can alter settings and/or generate reports.<br/>
     ● Implemented a similar web application targeting mobile devices.
 
-- company: TheNumber Inc.​, Victoria, BC
+- company: TheNumber Inc., Victoria, BC
   position: Web Performance Developer (Co-op)
   duration: March &mdash; May 2008
   summary: |
-    Responsibilities as a Web Performance Developer (Co-op)
-    ● Become familiar with a large existing codebase for an in-house CMS web application.
-    ● Locate opportunities for performance optimizations.
-    ● Implement various servers and services.
-    ● Benchmark improved architecture against existing system to verify speed gains.
-    Accomplishments
-    ● Learned a large variety of cutting-edge web technologies and techniques.
-    ● Implemented a distributed memory caching cluster.
+    Responsibilities as a Web Performance Developer (Co-op)<br/>
+    ● Become familiar with a large existing codebase for an in-house CMS web application.<br/>
+    ● Locate opportunities for performance optimizations.<br/>
+    ● Implement various servers and services.<br/>
+    ● Benchmark improved architecture against existing system to verify speed gains.<br/>
+    Accomplishments<br/>
+    ● Learned a large variety of cutting-edge web technologies and techniques.<br/>
+    ● Implemented a distributed memory caching cluster.<br/>
     ● Constructed a semi-automated accounts management and installation application.
 
 - company: eTraffic Solutions Inc., Victoria, BC
   position: Junior Developer (Co-op)
   duration: September &mdash; December 2006
   summary: |
-    Responsibilities as a Junior Developer (Co-op)
-    ● Receive requirements from project/development manager.
-    ● Document all steps in designing and implementing a solution to a complex problem.
-    ● Create new features for web-based educational software.
-    Accomplishments
-    ● Learned to work efficiently in a small team environment.
-    ● Established a rhythm of working to achieve constantly high productivity.
+    Responsibilities as a Junior Developer (Co-op)<br/>
+    ● Receive requirements from project/development manager.<br/>
+    ● Document all steps in designing and implementing a solution to a complex problem.<br/>
+    ● Create new features for web-based educational software.<br/>
+    Accomplishments<br/>
+    ● Learned to work efficiently in a small team environment.<br/>
+    ● Established a rhythm of working to achieve constantly high productivity.<br/>
     ● Determined a personal method for improving efficiency of a repeated process.
 
-- company: Neverblue Media Inc.​, Victoria, BC
+- company: Neverblue Media Inc., Victoria, BC
   position: Programmer / Data Enterer (Co-op)
-  duration: January &mdash; ​April 2006
+  duration: January &mdash; April 2006
   summary: |
-    Responsibilities as a Programmer / Data Enterer (Co-op)
-    ● Create modules in PHP for a large online advertising framework.
-    ● Create administrative tools to improve internal efficiency.
-    ● Manage and edit relational database systems.
-    ● Investigate new development tools.
-    Accomplishments
-    ● Learned to program efficiently in a small team environment.
-    ● Became familiar with a huge range of open-source utilities.
+    Responsibilities as a Programmer / Data Enterer (Co-op)<br/>
+    ● Create modules in PHP for a large online advertising framework.<br/>
+    ● Create administrative tools to improve internal efficiency.<br/>
+    ● Manage and edit relational database systems.<br/>
+    ● Investigate new development tools.<br/>
+    Accomplishments<br/>
+    ● Learned to program efficiently in a small team environment.<br/>
+    ● Became familiar with a huge range of open-source utilities.<br/>
     ● Created several internal administration modules to improve user management.
