--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,91 +6,117 @@
   position: Operations Engineer
   duration: May 2015 &mdash; April 2017
   summary: |
-    Responsibilities as an Operations Engineer<br/>
-    ● Automation of existing deployment processes; designing process updates and architecture to facilitate a SaaS platform using the cloud, within a security-focused, enterprise environment.<br/>
-    ● Improve developer team productivity through the use of new software tools, workflows, and automation frameworks.<br/>
-    ● Network design and implementation of enterprise deployments in multiple regions, across multiple cloud and IaaS vendors.<br/>
-    Accomplishments<br/>
-    ● Refactored large existing application for use with scheduled bare-metal clusters using Kubernetes/Docker.<br/>
-    ● Fully automated deployment process for server provisioning and application deployment.<br/>
-    ● Implemented centralized logging and metrics analytics systems including dashboard design.<br/>
-    ● Created CI pipeline implementing containerization and supporting continuous delivery.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Automation of existing deployment processes; designing process updates and architecture to facilitate a SaaS platform using the cloud, within a security-focused, enterprise environment.</li>
+      <li>Improve developer team productivity through the use of new software tools, workflows, and automation frameworks.</li>
+      <li>Network design and implementation of enterprise deployments in multiple regions, across multiple cloud and IaaS vendors.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Refactored large existing application for use with scheduled bare-metal clusters using Kubernetes/Docker.</li>
+      <li>Fully automated deployment process for server provisioning and application deployment.</li>
+      <li>Implemented centralized logging and metrics analytics systems including dashboard design.</li>
+      <li>Created CI pipeline implementing containerization and supporting continuous delivery.</li>
+    </ul>
 
 - company: Limbic Media, Victoria BC
   position: Project Engineer
   duration: June 2010 &mdash; May 2015
   summary: |
-    Responsibilities as a Project Engineer<br/>
-    ● Software engineering design and development for industrial, automated sensing contracts, and including hardware sourcing, firmware design, driver development, OS customization, and developing production architectures and internal tools.<br/>
-    ● Developing electronics, sensor, and new-user-interface applications for real-time interactive art installation contracts, working with artists to deliver a polished work.<br/>
-    ● System administration/operations, web architecture design and implementation for custom web services relating to art installation and/or industrial contracts, including maintenance and analytics through the lifecycle of the deployment.<br/>
-    Accomplishments<br/>
-    ● Sourced and designed the electronics and control software for the ​G++ Interactive Gallery Sign​ outside the Limbic Headquarters, featuring a public website with fast+interactive control of video playback and messages, to advertise and demonstrate to potential clients.<br/>
-    ● Designed and implemented a real-time, audio-reactive lighting control platform, using STM32F4 ICs and DMA/I2S audio processing pipeline.<br/>
-    ● Architected and implemented a robust, vehicle-mounted embedded Linux device integrating multiple sensors, multi-bearer networking, and a distributed queueing system.<br/>
-    ● Designed desktop applications and sensor processing algorithms for eight different art installations, with city-wide exhibitions.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Software engineering design and development for industrial, automated sensing contracts, and including hardware sourcing, firmware design, driver development, OS customization, and developing production architectures and internal tools.</li>
+      <li>Developing electronics, sensor, and new-user-interface applications for real-time interactive art installation contracts, working with artists to deliver a polished work.</li>
+      <li>System administration/operations, web architecture design and implementation for custom web services relating to art installation and/or industrial contracts, including maintenance and analytics through the lifecycle of the deployment.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Sourced and designed the electronics and control software for the ​G++ Interactive Gallery Sign​ outside the Limbic Headquarters, featuring a public website with fast+interactive control of video playback and messages, to advertise and demonstrate to potential clients.</li>
+      <li>Designed and implemented a real-time, audio-reactive lighting control platform, using STM32F4 ICs and DMA/I2S audio processing pipeline.</li>
+      <li>Architected and implemented a robust, vehicle-mounted embedded Linux device integrating multiple sensors, multi-bearer networking, and a distributed queueing system.</li>
+      <li>Designed desktop applications and sensor processing algorithms for eight different art installations, with city-wide exhibitions.</li>
+    </ul>
 
 - company: Simbioses Lab, University of Victoria​, Victoria, BC
   position: Researcher
   duration: June 2009 &mdash; August 2010
   summary: |
-    Accomplishments<br/>
-    ● Received NSERC USRA grant for researching computer vision.<br/>
-    ● Developed a rapid software prototyping environment using tangible objects based on fiducial markers and a conventional LCD monitor.<br/>
-    ● Adapted the prototyping application for a high-school workshop highlighting computer vision, presented at Brentwood College, Victoria BC.
+    Accomplishments</li>
+    <ul>
+      <li>Received NSERC USRA grant for researching computer vision.</li>
+      <li>Developed a rapid software prototyping environment using tangible objects based on fiducial markers and a conventional LCD monitor.</li>
+      <li>Adapted the prototyping application for a high-school workshop highlighting computer vision, presented at Brentwood College, Victoria BC.</li>
+    </ul>
   
-- company: Schneider Electric​, Victoria, BC
+- company: Schneider Electric, Victoria, BC
   position: Experimental Web Technologies Developer (Co-op)
   duration: September &mdash; December 2008
   summary: |
-    Responsibilities as an Experimental Web Technologies Developer (Co-op)<br/>
-    ● Implement proof-of-concept solutions for linking power monitoring devices to the web.<br/>
-    ● Research upcoming W3C web standards and emerging social network APIs.<br/>
-    ● Develop prototypes highlighting benefits of new standards.<br/>
-    ● Present findings to senior developers.<br/>
-    ● Write SR&ED Canada research reports documenting innovations.<br/>
-    Accomplishments<br/>
-    ● Created several prototypes able to communicate with existing, deployed power meters without requiring firmware/hardware upgrades.<br/>
-    ● Wrote a parser for an established serial protocol, building packets which are forwarded to the appropriate power meter, which can alter settings and/or generate reports.<br/>
-    ● Implemented a similar web application targeting mobile devices.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Implement proof-of-concept solutions for linking power monitoring devices to the web.</li>
+      <li>Research upcoming W3C web standards and emerging social network APIs.</li>
+      <li>Develop prototypes highlighting benefits of new standards.</li>
+      <li>Present findings to senior developers.</li>
+      <li>Write SR&ED Canada research reports documenting innovations.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Created several prototypes able to communicate with existing, deployed power meters without requiring firmware/hardware upgrades.</li>
+      <li>Wrote a parser for an established serial protocol, building packets which are forwarded to the appropriate power meter, which can alter settings and/or generate reports.</li>
+      <li>Implemented a similar web application targeting mobile devices.</li>
+    </ul>
 
 - company: TheNumber Inc., Victoria, BC
   position: Web Performance Developer (Co-op)
   duration: March &mdash; May 2008
   summary: |
-    Responsibilities as a Web Performance Developer (Co-op)<br/>
-    ● Become familiar with a large existing codebase for an in-house CMS web application.<br/>
-    ● Locate opportunities for performance optimizations.<br/>
-    ● Implement various servers and services.<br/>
-    ● Benchmark improved architecture against existing system to verify speed gains.<br/>
-    Accomplishments<br/>
-    ● Learned a large variety of cutting-edge web technologies and techniques.<br/>
-    ● Implemented a distributed memory caching cluster.<br/>
-    ● Constructed a semi-automated accounts management and installation application.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Become familiar with a large existing codebase for an in-house CMS web application.</li>
+      <li>Locate opportunities for performance optimizations.</li>
+      <li>Implement various servers and services.</li>
+      <li>Benchmark improved architecture against existing system to verify speed gains.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Learned a large variety of cutting-edge web technologies and techniques.</li>
+      <li>Implemented a distributed memory caching cluster.</li>
+      <li>Constructed a semi-automated accounts management and installation application.</li>
+    </ul>
 
 - company: eTraffic Solutions Inc., Victoria, BC
   position: Junior Developer (Co-op)
   duration: September &mdash; December 2006
   summary: |
-    Responsibilities as a Junior Developer (Co-op)<br/>
-    ● Receive requirements from project/development manager.<br/>
-    ● Document all steps in designing and implementing a solution to a complex problem.<br/>
-    ● Create new features for web-based educational software.<br/>
-    Accomplishments<br/>
-    ● Learned to work efficiently in a small team environment.<br/>
-    ● Established a rhythm of working to achieve constantly high productivity.<br/>
-    ● Determined a personal method for improving efficiency of a repeated process.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Receive requirements from project/development manager.</li>
+      <li>Document all steps in designing and implementing a solution to a complex problem.</li>
+      <li>Create new features for web-based educational software.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Learned to work efficiently in a small team environment.</li>
+      <li>Established a rhythm of working to achieve constantly high productivity.</li>
+      <li>Determined a personal method for improving efficiency of a repeated process.</li>
+    </ul>
 
 - company: Neverblue Media Inc., Victoria, BC
   position: Programmer / Data Enterer (Co-op)
   duration: January &mdash; April 2006
   summary: |
-    Responsibilities as a Programmer / Data Enterer (Co-op)<br/>
-    ● Create modules in PHP for a large online advertising framework.<br/>
-    ● Create administrative tools to improve internal efficiency.<br/>
-    ● Manage and edit relational database systems.<br/>
-    ● Investigate new development tools.<br/>
-    Accomplishments<br/>
-    ● Learned to program efficiently in a small team environment.<br/>
-    ● Became familiar with a huge range of open-source utilities.<br/>
-    ● Created several internal administration modules to improve user management.
+    <h5>Responsibilities</h5>
+    <ul>
+      <li>Create modules in PHP for a large online advertising framework.</li>
+      <li>Create administrative tools to improve internal efficiency.</li>
+      <li>Manage and edit relational database systems.</li>
+      <li>Investigate new development tools.</li>
+    </ul>
+    <h5>Accomplishments</h5>
+    <ul>
+      <li>Learned to program efficiently in a small team environment.</li>
+      <li>Became familiar with a huge range of open-source utilities.</li>
+      <li>Created several internal administration modules to improve user management.</li>
+    </ul>
