--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,6 @@
 # Degree
-- degree: B. Eng, Computer Engineering, Systems Specialization
+- degree: B. Eng, <a href="https://www.uvic.ca/engineering/ece/current/undergraduate/index.php">Computer Engineering, Systems Specialization</a>
   uni: University of Victoria
   year: 2004 &mdash; 2009
   awards:
     - award: "Engineering Student's Society Director of Communications, 2006-2007"
-  #summary: 
