--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -38,7 +38,7 @@
       <li>Designed desktop applications and sensor processing algorithms for eight different art installations, with city-wide exhibitions.</li>
     </ul>
 
-- company: <a href="https://connex.csc.uvic.ca/access/wiki/site/simbioses/welcome.html?breadcrumb=0">Simbioses Lab, University of Victoria</a>, Victoria, BC
+- company: <a href="https://connex.csc.uvic.ca/access/wiki/site/simbioses/welcome.html?breadcrumb=0">Simbioses Lab</a>, University of Victoria, Victoria, BC
   position: Researcher
   duration: June 2009 &mdash; August 2010
   summary: |
