--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: B. Eng, <a href="https://www.uvic.ca/engineering/ece/current/undergraduate/index.php">Computer Engineering, Systems Specialization</a>
+- degree: B. Eng, Computer Engineering, <a href="https://www.uvic.ca/engineering/ece/current/undergraduate/index.php">Systems Specialization</a>
   uni: University of Victoria
   year: 2004 &mdash; 2009
   awards:
