Add target=_blank on links

--- a/_data/art_exhibitions.yml
+++ b/_data/art_exhibitions.yml
@@ -2,7 +2,7 @@
   date: April 2013
   summary: |
     <ul>
-      <li><a href="http://vimeo.com/65099973">Laterna Magica</a>: An audio puzzle; a series of hurricane lanterns retrofitted with LEDs and three distinct audio-segmentation algorithms.</li>
+      <li><a target="_blank" href="http://vimeo.com/65099973">Laterna Magica</a>: An audio puzzle; a series of hurricane lanterns retrofitted with LEDs and three distinct audio-segmentation algorithms.</li>
     </ul>
 
 - venue: Downtown Victoria Business Association, Victoria, BC
@@ -10,24 +10,24 @@
   summary: |
     <ul>
       <li>Wintertree: An audio-reactive, ~1600 LED node installation.</li>
-      <li><a href="http://vimeo.com/55631440">Winterplay</a>: An SMS-triggered video jukebox via large-scale projection.</li>
+      <li><a target="_blank" href="http://vimeo.com/55631440">Winterplay</a>: An SMS-triggered video jukebox via large-scale projection.</li>
     </ul>
 
 - venue: G++ Gallery, Victoria, BC
   date: December 2011- March 2013
   summary: |
     <ul>
-      <li><a href="http://vimeo.com/54110268">Fish.e</a>: A custom-built paper-mache and LED structure, with video mapping, tracked user silhouettes, and clap-detection.</li>
-      <li><a href="https://vimeo.com/51083771">The Woods</a>: An SMS-triggered choose-your-own adventure via two HDTVs.</li>
-      <li><a href="https://vimeo.com/49036402">Impulse</a>: A multiplayer heart-sensor, LED, and projection-mapping installation.</li>
-      <li><a href="https://vimeo.com/44918014">Shadows & Light</a>: Traditional Chinese shadow-puppet play, automated via projection and robotics.</li>
-      <li><a href="https://vimeo.com/35887985">Atagamaton</a>: A Kinect-triggered robotics installation.</li>
-      <li><a href="https://vimeo.com/49618265">Ectoplasmic Scream</a>: A face-tracking based art piece featuring sampled videos of the artist, and a soft-body physics simulation controlled by the openness of a user’s mouth.</li>
+      <li><a target="_blank" href="http://vimeo.com/54110268">Fish.e</a>: A custom-built paper-mache and LED structure, with video mapping, tracked user silhouettes, and clap-detection.</li>
+      <li><a target="_blank" href="https://vimeo.com/51083771">The Woods</a>: An SMS-triggered choose-your-own adventure via two HDTVs.</li>
+      <li><a target="_blank" href="https://vimeo.com/49036402">Impulse</a>: A multiplayer heart-sensor, LED, and projection-mapping installation.</li>
+      <li><a target="_blank" href="https://vimeo.com/44918014">Shadows & Light</a>: Traditional Chinese shadow-puppet play, automated via projection and robotics.</li>
+      <li><a target="_blank" href="https://vimeo.com/35887985">Atagamaton</a>: A Kinect-triggered robotics installation.</li>
+      <li><a target="_blank" href="https://vimeo.com/49618265">Ectoplasmic Scream</a>: A face-tracking based art piece featuring sampled videos of the artist, and a soft-body physics simulation controlled by the openness of a user’s mouth.</li>
     </ul>
 
 - venue: Ministry of Casual Living, Victoria, BC
   date: May 2010
   summary: |
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=kLZPM55motA">Ministry of Casual Touching</a>: Computer-vision/music interactive installation; a warped projected scene resembling wheat fields, generated audio, and a touch sensitive glass display.</li>
+      <li><a target="_blank" href="https://www.youtube.com/watch?v=kLZPM55motA">Ministry of Casual Touching</a>: Computer-vision/music interactive installation; a warped projected scene resembling wheat fields, generated audio, and a touch sensitive glass display.</li>
     </ul>
