--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -20,7 +20,7 @@
       <li>Created CI pipeline implementing containerization and supporting continuous delivery.</li>
     </ul>
 
-- company: <a target="_blank" href="https://limbicmedia.ca/">Limbic Media<a>, Victoria BC
+- company: <a target="_blank" href="https://limbicmedia.ca/">Limbic Media</a>, Victoria BC
   position: Project Engineer
   duration: June 2010 &mdash; May 2015
   summary: |
