--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ resume_section_experience:      true
 resume_section_education:       true
 #resume_section_projects:        true
 resume_section_skills:          true
+resume_section_abilities:       true
 resume_section_publications:    true
 resume_section_art_exhibitions: true
 #resume_section_links:           true
