Add Laser Cutter to Mechanical Skills section

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -8,7 +8,7 @@
   description: KiCAD - Sourcing - Oscilloscope/Analyzer - ESP32 - STM32 - FTDI - RaspberryPi
 
 - skill: Mechanical
-  description: Fusion 360 - Modo - Rhino/Grasshopper - 3D Printing
+  description: Fusion 360 - Modo - Rhino/Grasshopper - 3D Printing - Laser Cutter
 
 - skill: Architecture
   description: Serverless - GraphQL - REST - MQTT - Firebase - DynamoDB - Redis - PostgreSQL - Elastic - InfluxDB - Protocol Buffers - FlatBuffers
