Update Research In Progress experience wording

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,9 +7,9 @@
       <li>System design, architecture, and implementation of consumer electronics hardware prototypes.</li>
       <li>Implement device security best practices to protect sensitive consumer data over public/private networks.</li>
       <li>Research, source, and integrate newly released microcontrollers and sensors for ambient interactivity.</li>
-      <li>Design and produce manufacturing test jigs to verify assembly and programming of electronic products.</li>
+      <li>Design and produce test jigs to verify assembly and programming of electronic products.</li>
       <li>Generate product renderings and assembly views for in-progress prototypes.</li>
-      <li>Research emerging software/infrastructure technologies to enable rapid application development.</li>
+      <li>Assess emerging software/infrastructure technologies to enable rapid application development.</li>
     </ul>
     <i>Accomplishments</i>
     <ul>
